--- a/index.html
+++ b/index.html
@@ -45,6 +45,35 @@
         <h1>Contact Information</h1>
 
         <div class="info-section">
+            <h1>معلومات مؤسسه تعصیلات عالی هریوا</h1>
+            <p class="contact-info">
+                <span>Facebook:</span> 
+                <a href="https://www.facebook.com/Hariwa1393" target="_blank">Facebook Profile</a>
+            </p>
+            <p class="contact-info">
+                <span>Instagram:</span> 
+                <a href="https://www.instagram.com/hariwa_edu?igsh=MTRud3FlNndvZnpzaQ==" target="_blank">Instagram Profile</a>
+            </p>
+            <p class="contact-info">
+                <span>Email:</span> info@hariwa.edu.af
+            </p>
+            <p class="contact-info">
+                <span>website:</span> <a href="www.hariwa.edu.af" target="_bland"> Hariwa.edu.af</a> 
+            </p>
+            <p class="contact-info">
+                <span>Office Editor (Hariwa):</span> 0794654000
+            </p>
+            <p class="contact-info"></p>
+                <span>Reception (Hariwa):</span> 0799600344
+            </p>
+            
+            <p class="contact-info">
+                <span>Address (Hariwa):</span> پنج راه آب بخش باد مرغان _ جاده شرقی _ فردوسی ۱۵
+            </p>
+        </div>
+        <hr>
+        <div>
+            <h1>کلینیک کامپلکس دندان احیای نشاط </h1>
             <p class="contact-info">
                 <span>Facebook:</span> 
                 <a href="https://www.facebook.com/share/1H6CwJ8XHf/?mibextid=wwXIfr" target="_blank">Facebook Profile</a>
@@ -53,17 +82,9 @@
                 <span>Instagram:</span> 
                 <a href="https://www.instagram.com/ehya_e.nashat/profilecard/?igsh=NmswcHNxYnZlNXpp" target="_blank">Instagram Profile</a>
             </p>
-            <p class="contact-info">
-                <span>Email:</span> info@hariwa.edu.af
-            </p>
-            <p class="contact-info">
-                <span>Phone (Hariwa):</span> 0794654000
             </p>
             <p class="contact-info">
                 <span>Dental Clinic Phone (Neshat):</span> 0792835555
-            </p>
-            <p class="contact-info">
-                <span>Address (Hariwa):</span> پنج راه آب بخش باد مرغان _ جاده شرقی _ فردوسی ۱۵
             </p>
             <p class="contact-info">
                 <span>Dental Clinic Address (Neshat):</span> افغانستان، هرات، فلکه بکرآباد، به سمت پسته نمبر یک
