--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1>Contact Information</h1>
 
         <div class="info-section">
-            <h1>معلومات مؤسسه تعصیلات عالی هریوا</h1>
+            <h1>معلومات مؤسسه تحصیلات عالی هریوا</h1>
             <p class="contact-info">
                 <span>Facebook:</span> 
                 <a href="https://www.facebook.com/Hariwa1393" target="_blank">Facebook Profile</a>
@@ -73,7 +73,7 @@
         </div>
         <hr>
         <div>
-            <h1>کلینیک کامپلکس دندان احیای نشاط </h1>
+            <h1>معلومات کلینیک کامپلکس دندان احیای نشاط </h1>
             <p class="contact-info">
                 <span>Facebook:</span> 
                 <a href="https://www.facebook.com/share/1H6CwJ8XHf/?mibextid=wwXIfr" target="_blank">Facebook Profile</a>
@@ -84,10 +84,10 @@
             </p>
             </p>
             <p class="contact-info">
-                <span>Dental Clinic Phone (Neshat):</span> 0792835555
+                <span>Dental Clinic Phone (Ehya-E-Nashat):</span> 0792835555
             </p>
             <p class="contact-info">
-                <span>Dental Clinic Address (Neshat):</span> افغانستان، هرات، فلکه بکرآباد، به سمت پسته نمبر یک
+                <span>Dental Clinic Address (Ehya-E-Nashat):</span> افغانستان، هرات، فلکه بکرآباد، به سمت پسته نمبر یک
             </p>
         </div>
     </div>
